--- a/fontIcons.html
+++ b/fontIcons.html
@@ -9,13 +9,14 @@
     <title>FontIcons</title>
 
     <!-- Font Awesome CDN -->
+
     <!-- YOUR CODE HERE -->
 
 </head>
 <body>
 
     <!-- Header -->
-    <h1>FontIcons</h1>
+    <h1>FontIcons_2</h1>
 
     <!-- Add FontIcons Code HERE -->
 
